# rshare

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  cmp.py  main.py  mkdocs.yml  my.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml
crates/rshare/: Cargo.toml
crates/rshare-cal/: Cargo.toml
crates/rshare-req/: Cargo.toml
crates/rshare-req/src/: lib.rs
crates/rshare-req/src/functions/: fetch.rs
crates/rshare/src/: lib.rs
docker/: Dockerfile
docs/: ci.md  index.md  rust.md  vscode.md
examples/: Cargo.toml
examples/cal/: Cargo.toml
examples/cal/src/: main.rs
examples/fetch/: Cargo.toml
examples/fetch/src/: main.rs
py-rshare/: Cargo.toml  README.md  pyproject.toml  requirements.txt
py-rshare/rshare/: __init__.py  fetch.py  rshare.pyi
py-rshare/rshare/tests/: main.py
py-rshare/rshare/utils/: _rshare_version.py
py-rshare/src/: lib.rs  lib_copy.rs  temp_main.rs
python/: main.py
rshare/: __init__.py  fetch.py  rshare.pyi
src/: lib.rs  main-demo.rs  main.rs
