[package]
name = "rshare"
version = "0.1.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rshare"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# 二进制配置
[[bin]]
name = "rshare_bin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = { version = "0.18.1" }
pyo3 = { version = "0.20.0", features = ["abi3-py38"] }
rayon = { version = "1.8.0" }
numpy = { version = "0.20.0" }
rand = { version = "0.8.5" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
# 对于 Linux aarch64 架构需要重新编译 openssl
openssl = { version = "0.10.61", features = ["vendored"] }
