[workspace]
members = ["crates/*", "py-rshare"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
homepage = "https://pypi.org/project/rshare/"
documentation = "https://pypi.org/project/rshare/"
repository = "https://github.com/albertandking/rshare"
authors = ["Albert King"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rshare-req = { path = "crates/rshare-req" }
rshare-cal = { path = "crates/rshare-cal" }
rshare = { path = "crates/rshare" }

reqwest = { version = "0.11", features = ["blocking"] }
scraper = { version = "0.19" }
pyo3 = { version = "0.20", features = ["abi3-py38", "auto-initialize"] }
rayon = { version = "1.8" }
numpy = { version = "0.20" }
rand = { version = "0.8" }
