[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rshare"
requires-python = ">=3.8"
dynamic = ["version"]
description = "It is a toy project for Python and Rust!"
keywords = ["data", "finance", "stock", "futures"]
authors = [
  {email = "albertandking@gmail.com"},
  {name = "Albert King"}
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "requests",
  "beautifulsoup4",
]
license = "MIT"

[project.urls]
homepage = "https://github.com/jindaxiang/rshare"
documentation = "https://rshare.readthedocs.io/"
repository = "https://github.com/jindaxiang/rshare"
changelog = "https://github.com/jindaxiang/rshare/blob/master/CHANGELOG.md"


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
exclude = ["*.pyi", "*.ipynb"]